# ai-code-challenger

./: .gitignore  README.md  render.yaml  requirements.txt  vercel.json
backend/: ai_code_challenger.db  pyproject.toml  server.py
backend/src/: ai_generator.py  app.py  requirements.txt  utils.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py
frontend/: index.html
frontend/src/: App.css  App.jsx
frontend/src/auth/: AuthenticationPage.jsx
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: Layout.jsx
frontend/src/utils/: api.js
